# gitent

./: Cargo.toml  README.md
examples/: agent_integration.rs
gitent-cli/: Cargo.toml
gitent-cli/.gitent/: gitent.db
gitent-cli/src/: display.rs  main.rs
gitent-cli/src/commands/: commit.rs  diff.rs  log.rs  mod.rs  rollback.rs  start.rs  status.rs
gitent-core/: Cargo.toml
gitent-core/src/: diff.rs  error.rs  lib.rs  models.rs  storage.rs
gitent-sdk/: Cargo.toml
gitent-sdk/src/: lib.rs
gitent-server/: Cargo.toml
gitent-server/src/: api.rs  lib.rs  server.rs  watcher.rs
