[workspace]
members = ["gitent-core", "gitent-server", "gitent-cli", "gitent-sdk"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/gitent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File watching
notify = "6.1"
notify-debouncer-full = "0.3"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"

# Diffing
similar = "2.4"
similar-asserts = "1.5"

# Hashing
sha2 = "0.10"
hex = "0.4"

[package]
name = "gitent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Version control for AI agent changes"

[dependencies]
gitent-core = { path = "gitent-core" }
gitent-server = { path = "gitent-server" }
gitent-cli = { path = "gitent-cli" }
gitent-sdk = { path = "gitent-sdk" }
