[package]
name = "gitent-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SDK for AI agents to integrate with gitent"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
