[package]
name = "gitent-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Server for gitent - file watching and API"

[dependencies]
gitent-core = { path = "../gitent-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
